add comments and fix bug insert data

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
       <div class="grid">
         <div class="results">
           <h2 id="win"></h2>
-          <h2 id="results-title">Meilleurs temps &#127881;</h2>
-          <p>TOP 3</p>
+          <div id="results-header">
+            <h2 id="results-title">Meilleurs temps &#127881;</h2>
+            <p>TOP 3</p>
+          </div>
           <ul></ul>
         </div>
         <table></table>
